--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title></title>
   </head>
   <body>
-    
+    <form class="" action="/" method="post">
+      <label for="cityinput">Enter City name</label>
+      <input id=cityinput type="text" name="cityName" value="">
+      <button type="submit">Go</button>
+    </form>
 
   </body>
 </html>
